Ajout d'un middleware d'authentification

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,7 @@
   <script type="text/javascript">
     (function () {
       emailjs.init({
-        publicKey: process.env.VITE_YOUR_PUBLIC_KEY,
+        publicKey: process.env.PUBLIC_KEY,
       });
     })();
   </script>
