ajout de commentaire

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
   </script>
   <script type="text/javascript">
     (function () {
-      emailjs.init({
+      emailjs.init({//initialisation de l'API
         publicKey: process.env.PUBLIC_KEY,
       });
     })();
