--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,12 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="/main.js"></script>
+  <!-- ROOT ELEMENT -->
+  <div id="root"></div>
+
+  <!-- SCRIPT -->
+  <script type="module" src="/main.jsx"></script>
+
   <!-- BOOTSRAP SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
