--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,8 +41,7 @@
   </script>
 
   <!-- EMAILJS -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-  </script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com/dist/email.min.js"></script>
   <script type="text/javascript">
     (function () {
       emailjs.init({//initialisation de l'API
@@ -50,6 +49,8 @@
       });
     })();
   </script>
+</body>
+</body>
 </body>
 
 </html>
